--- a/src/app/screens/messages/messages.component.css
+++ b/src/app/screens/messages/messages.component.css
@@ -13,7 +13,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    margin: 2rem 0;
+    margin: 10px 0;
     padding: 1.6rem;
     border-bottom: 1px solid #E0E0E0;
     background: var(--surface-default-white, #FFF);
@@ -100,7 +100,7 @@
 .instance_grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    padding: 1.5rem;
+    padding: 10px;
     gap: 1.5rem;
 }
 
@@ -257,7 +257,7 @@
 
 .msg-boxes-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     gap: 10px;
     flex-wrap: wrap;
     padding: 0 10px;
@@ -274,6 +274,6 @@
 .msg-box textarea {
     background: none;
     border: none;
-    height: 100px;
+    height: 100%;
     resize: none;
 }
