--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -106,7 +106,7 @@
             width="13"
             height="13"
             viewBox="0 0 13 13"
-            fill="none"
+            fill="black"
           >
             <path
               d="M12.0278 11.6573L0.808298 1.34253M12.0278 1.34253L0.808298 11.6573"
@@ -149,30 +149,65 @@
             <div>Messages</div>
           </div>
           <div class="at_item">
-            <div>Created At</div>
-            <div>Target Type</div>
-            <div>Target</div>
-            <div>Message Type</div>
-            <div>Sent Via</div>
-            <div>Status</div>
+            <div>FEB, 12/07/2024, 4:38PM</div>
+            <div style="color: #2ebc96">whatsapp</div>
+            <div>+447585959490</div>
+            <div>Arrived</div>
+            <div style="color: #2ebc96">whatsapp</div>
+            <div>
+              <p class="s_dot_g"></p>
+              Send
+            </div>
+            <div>Messages</div>
+          </div>
+
+          <div class="at_item">
+            <div>FEB, 12/07/2024, 4:38PM</div>
+            <div style="color: #2ebc96">whatsapp</div>
+            <div>+447585959490</div>
+            <div>Arrived</div>
+            <div style="color: #2ebc96">whatsapp</div>
+            <div>
+              <p class="s_dot_r"></p>
+              Not Send
+            </div>
             <div>Messages</div>
           </div>
           <div class="at_item">
-            <div>Created At</div>
-            <div>Target Type</div>
-            <div>Target</div>
-            <div>Message Type</div>
-            <div>Sent Via</div>
-            <div>Status</div>
+            <div>FEB, 12/07/2024, 4:38PM</div>
+            <div style="color: #3981f7">SMS</div>
+            <div>+447585959490</div>
+            <div>Arrived</div>
+            <div style="color: #2ebc96">whatsapp</div>
+            <div>
+              <p class="s_dot_g"></p>
+              Send
+            </div>
             <div>Messages</div>
           </div>
           <div class="at_item">
-            <div>Created At</div>
-            <div>Target Type</div>
-            <div>Target</div>
-            <div>Message Type</div>
-            <div>Sent Via</div>
-            <div>Status</div>
+            <div>FEB, 12/07/2024, 4:38PM</div>
+            <div style="color: #3981f7">SMS</div>
+            <div>+447585959490</div>
+            <div>Arrived</div>
+            <div style="color: #2ebc96">whatsapp</div>
+            <div>
+              <p class="s_dot_r"></p>
+              Not Send
+            </div>
+            <div>Messages</div>
+          </div>
+          <div class="at_item">
+            <div>FEB, 12/07/2024, 4:38PM</div>
+            <div style="color: #2ebc96">whatsapp</div>
+            <div>+447585959490</div>
+            <div>Arrived</div>
+            <div style="color: #2ebc96">whatsapp</div>
+            <div>
+              <p class="s_dot_r"></p>
+              Not Send
+            </div>
+
             <div>Messages</div>
           </div>
         </div>
