--- a/src/app/screens/home/home.component.css
+++ b/src/app/screens/home/home.component.css
@@ -50,6 +50,8 @@
     box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20);
     border-radius: 10px;
     padding: 10px;
+    height: 300px;
+    overflow-y: scroll;
 }
 
 .bottom .devices {
@@ -384,8 +386,6 @@
     padding: 10px;
     border-radius: 8px;
     background: #FFF;
-    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
-    border: none;
     cursor: pointer;
     outline: none;
     display: flex;
@@ -396,6 +396,7 @@
 .a_top button svg {
     height: 15px;
     width: 15px;
+    color: black;
 }
 
 .a_top button span {
@@ -409,13 +410,11 @@
 
 .a_top button.filter {
     border-radius: 8px;
-    background: linear-gradient(270deg, #2EBC96 0%, #1A9096 100%);
-    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.25);
+    border: 1px solid black;
+    
 }
 
-.a_top button.filter span {
-    color: white;
-}
+
 
 .filters {
     display: flex;
@@ -423,9 +422,9 @@
     align-items: center;
     gap: 1rem;
     border-radius: 12px;
-    background: linear-gradient(273deg, #2EBC96 2.11%, #1A9096 121.12%);
     padding: 10px;
     position: relative;
+
 }
 .close {
     position: absolute;
@@ -500,14 +499,53 @@
 
 .at_item {
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
+    gap: 30px;
     border-radius: 6.201px;
     border-bottom: 1px solid rgba(238, 238, 238, 0.93);
     background: #FFF;
+    font-size: 13px;
+}
+
+.at_item * {
+    text-align: center;
+}
+
+.at_item:first-child {
+    color: #A3AED0;
+    font-size: 11px;
 }
 
 .at_item div {
-    padding: 1rem;
+    padding: 1rem 0;
+}
+
+.at_item div:nth-child(1) {
+    width: 144px;
+}
+
+.at_item div:nth-child(2) {
+    width: 56px;
+}
+
+.at_item div:nth-child(3) {
+    width: 93px;
+}
+
+.at_item div:nth-child(4) {
+    width: 70px;
+}
+
+.at_item div:nth-child(5) {
+    width: 56px;
+}
+
+.at_item div:nth-child(6) {
+    width:68px;
+}
+
+.at_item div:nth-child(7) {
+    width:68px;
 }
 
 
@@ -541,4 +579,22 @@
         flex-direction: column;
         gap: 1rem;
     }
+}
+
+.s_dot_r {
+    background-color: #FF515C;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    display: inline-block;
+    margin-bottom: 0;
+}
+
+.s_dot_g {
+    background-color: #2EBC96;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    display: inline-block;
+    margin-bottom: 0;
 }
