--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,3 +1,7 @@
-<canvas baseChart [datasets]="pieChartData.datasets" [labels]="pieChartLabels" [options]="pieChartOptions"
-    [type]="pieChartType">
+<canvas
+  baseChart
+  [data]="pieChartData"
+  [options]="pieChartOptions"
+  [type]="pieChartType"
+>
 </canvas>
