--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -127,6 +127,22 @@
     white-space: nowrap;
 }
 
+.menu_item:hover {
+    background: linear-gradient(to right, #2EBC96, #1A9096);
+}
+
+.menu_item:hover *{
+    color: white;
+}
+
+.menu_item:hover img:first-child {
+    display: none;
+}
+
+.menu_item:hover img:nth-child(2) {
+    display: flex;
+}
+
 a {
     text-decoration: none;
 }
@@ -306,7 +322,8 @@ a {
 } */
 
 .sidebar-borders {
-    box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20);
+    /* box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20); */
+    border: 1px solid lightgray;
     border-radius: 15px;
     padding: 15px auto;
     display: flex;
