--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -230,11 +230,7 @@
       </ul>
       <ul class="sidebar-borders menu">
         <a [routerLink]="'/'">
-          <li
-            (click)="setCurrentItem('Home')"
-            [class.active]="currentItem === 'Home'"
-            class="menu_item"
-          >
+          <li (click)="logoutHandler()" class="menu_item">
             <div>
               <img src="../../../assets/logouticon.png" />
               <img src="../../../assets/logouticonw.png" />
