--- a/src/app/screens/block-list/block-list.component.html
+++ b/src/app/screens/block-list/block-list.component.html
@@ -179,7 +179,22 @@
       </div>
       <ng-container *ngIf="!isLoad">
         <div *ngFor="let it of blacklist; let i = index" class="t-item">
-          <div class="ti-item">{{ i + 1 }}</div>
+          <div class="ti-item" style="height: fit-content">
+            <p
+              style="
+                border: 1px solid black;
+                border-radius: 4px;
+                height: 20px;
+                width: 20px !important;
+                margin-bottom: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
+              {{ i + 1 }}
+            </p>
+          </div>
           <div class="ti-item">{{ it?.phone }}</div>
           <div class="ti-item">
             <div
