--- a/src/app/screens/devices/devices.component.html
+++ b/src/app/screens/devices/devices.component.html
@@ -239,10 +239,10 @@
 
   <div style="display: flex; gap: 10px">
     <div class="reports">
-      <app-reports-device
-        [trackDriverTotalMsg]="trackDriverTotalMsg"
+      <app-reports
         [graphData]="barChartData"
-      ></app-reports-device>
+        [totalMsg]="totalMsg"
+      ></app-reports>
     </div>
     <div class="msg-details">
       <div class="msg-details-sec">
@@ -265,7 +265,7 @@
         </div>
         <div>
           06 Hours
-          <span>{{ wa60Min }}</span>
+          <span>{{ wa6Hr }}</span>
         </div>
         <div>
           12 Hours
@@ -296,7 +296,7 @@
         </div>
         <div>
           06 Hours
-          <span>{{ sms60Min }}</span>
+          <span>{{ sms6Hr }}</span>
         </div>
         <div>
           12 Hours
@@ -315,7 +315,7 @@
       <div class="icon"><img src="../../../assets/an-sms.png" /></div>
       <div>
         <p>Total SMS</p>
-        <p>{{ trackDriverTotalMsg }}</p>
+        <p>{{ totalSms }}</p>
 
         <p>
           <span><img src="../../../assets/an-arrow.png" /> 16%</span> this month
@@ -326,7 +326,7 @@
       <div class="icon"><img src="../../../assets/an-whatsapp.png" /></div>
       <div>
         <p>Total WhatsApp</p>
-        <p>5,423</p>
+        <p>{{ totalWhatsapp }}</p>
 
         <p>
           <span><img src="../../../assets/an-arrow.png" /> 16%</span> this month
@@ -487,7 +487,7 @@
             </td>
 
             <td>{{ item.to_number }}</td>
-            <td>{{ item.msg_type }}</td>
+            <td style="text-transform: capitalize">{{ item.msg_type }}</td>
             <td>
               <div style="color: #3981f7" *ngIf="item.sent_by === 0">SMS</div>
               <div style="color: #2ebc96" *ngIf="item.sent_by === 1">
@@ -501,7 +501,9 @@
               {{ item.status }}
             </td>
 
-            <td>{{ item.message_text }}</td>
+            <td>
+              {{ item.message_text }}
+            </td>
           </tr>
         </tbody>
       </table>
