--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -1,50 +1,42 @@
 <div class="container-own">
   <div class="top">
+    <div></div>
     <div class="reports">
-      <app-reports></app-reports>
+      <app-reports
+        [graphData]="barChartData"
+        [totalMsg]="totalMsg"
+      ></app-reports>
+      <!-- <app-reports></app-reports> -->
     </div>
     <div class="bar-container">
-      <div class="bc-top">
-        <h3>Message Average</h3>
-        <a href="#">
-          <span> monthly </span>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="21"
-            height="21"
-            viewBox="0 0 21 21"
-            fill="none"
-          >
-            <path
-              d="M14.3274 8.57154L10.1134 12.7856L5.89931 8.57154L14.3274 8.57154Z"
-              fill="#2EBC96"
-            />
-          </svg>
-        </a>
+      <div class="banner-bg">
+        <img src="../../../assets/banner-bg.png" />
+        <P>From 1-31 March, 2022</P>
+        <h4>Messages Average</h4>
       </div>
-      <div class="chart">
+      <div class="labels">
+        <div style="border-left: 2px solid #ff515c; padding-left: 10px">
+          <h6 style="color: #a3aed0; font-size: 10px">WhatsApp</h6>
+          <p style="font-size: 18px">{{ totalWhatsapp }}</p>
+        </div>
+        <div style="border-left: 2px solid #2ebc96; padding-left: 10px">
+          <h6 style="color: #a3aed0; font-size: 10px">SMS</h6>
+          <p style="font-size: 18px">{{ totalSms }}</p>
+        </div>
+      </div>
+      <div class="chart" style="position: relative">
         <!-- <app-doughnut-chart [colors]="['#FF515C','#2EBC96', '#3B82F6']"
                     [data]="[55, 30, 15]"></app-doughnut-chart> -->
         <app-pie-chart
           [colors]="['#FF515C', '#2EBC96', '#3B82F6']"
-          [data]="[55, 30, 15]"
+          [data]="pieData"
         ></app-pie-chart>
+        <div style="text-align: center; position: absolute; bottom: 0">
+          <h6 style="color: #a3aed0; font-size: 10px">Total Sents</h6>
+          <p style="font-size: 18px; font-weight: 600">{{ totalMsg }}</p>
+        </div>
       </div>
 
-      <div class="labels">
-        <div>
-          <label style="--color: #ff515c">Total Sent</label>
-          <p>55</p>
-        </div>
-        <div>
-          <label style="--color: #2ebc96">WhatsApp</label>
-          <p>30</p>
-        </div>
-        <div>
-          <label style="--color: #3b82f6">SMS</label>
-          <p>15</p>
-        </div>
-      </div>
       <!-- <div class="bc-table">
                 <div class="bct-item">
                     <div class="dot" style="color: white;">.</div>
@@ -80,22 +72,13 @@
         <!-- <button> -->
         <h1>All Messages</h1>
         <!-- </button> -->
-        <button class="filter" (click)="showFilters = true">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="21"
-            height="14"
-            viewBox="0 0 21 14"
-            fill="none"
-          >
-            <path
-              d="M2 1.79053H18.67M5.12556 6.9999H15.5443M9.29302 12.2093H11.3768"
-              stroke="white"
-              stroke-width="3"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
+        <button
+          class="filter"
+          [ngClass]="{ active: showFilters }"
+          (click)="showFilters = true"
+        >
+          <img src="../../../assets/filter-icon-black.png" />
+          <img src="../../../assets/filter-icon.png" />
           <span>Filters</span>
         </button>
       </div>
@@ -118,29 +101,87 @@
           </svg>
         </button>
         <div class="left">
-          <div class="inp_con">
-            <label for="">Target</label>
-            <select name="" id=""></select>
-          </div>
-          <div class="inp_con">
-            <label for="">Target Type</label>
-            <select name="" id=""></select>
-          </div>
-          <div class="inp_con">
-            <label for="">Status</label>
-            <select name="" id=""></select>
-          </div>
-          <div class="inp_con">
-            <label for="">Send Via</label>
-            <select name="" id=""></select>
+          <div class="filter-inputs">
+            <div class="filter-inputs-line">
+              <div class="inp_con">
+                <label for="">Target</label>
+                <!-- <select name="" id="">
+                  <option *ngFor="let target of targetList" [value]="target.id">
+                    {{ target }}
+                  </option>
+                </select> -->
+                <!-- <input
+                  type="text"
+                  formControlName="target"
+                  placeholder="Enter target"
+                  
+                /> -->
+                <input
+                  class="form-control"
+                  [(ngModel)]="target"
+                  type="number"
+                />
+              </div>
+              <div class="inp_con">
+                <label for="">Target Type</label>
+                <select name="" id="" [(ngModel)]="target_type">
+                  <option value="whatsapp">WhatsApp</option>
+                  <option value="non_whatsapp">Sms</option>
+                </select>
+                <!-- <input
+                  type="text"
+                  formControlName="target_type"
+                  placeholder="Enter target type"
+                /> -->
+              </div>
+              <div class="inp_con">
+                <label for="">Status</label>
+                <!-- <select name="" id="">
+                  <option *ngFor="let status of statusList" [value]="status.id">
+                    {{ status }}
+                  </option>
+                </select> -->
+                <select [(ngModel)]="status">
+                  <option value="Sent">Sent</option>
+                  <option value="Failed">Failed</option>
+                </select>
+              </div>
+
+              <div class="inp_con">
+                <label for="">Send Via</label>
+                <select name="" id="" [(ngModel)]="sent_by">
+                  <option value="1">WhatsApp</option>
+                  <option value="0">Sms</option>
+                  <option value="2">None</option>
+                </select>
+                <!-- <input
+                  type="number"
+                  [(ngModel)]="sent_by"
+                  placeholder="Enter sender ID"
+                /> -->
+              </div>
+              <div class="inp_con">
+                <label for="">From</label>
+                <input type="date" [(ngModel)]="f_date" />
+              </div>
+              <div class="inp_con">
+                <label for="">To</label>
+                <input type="date" [(ngModel)]="t_date" />
+              </div>
+            </div>
+
+            <div class="filter-btn-con">
+              <button (click)="search()">Search</button>
+              <button (click)="clean()">Clear</button>
+            </div>
           </div>
         </div>
         <!-- <video src="../../../assets/videos/search.mp4" autoplay="true" muted="true" loop="true"></video> -->
       </div>
       <div class="a_table_wrapper">
-        <div class="a_table">
-          <div class="at_item">
-            <div>Created At</div>
+        <div class="a_table" style="width: fit-content">
+          <div class="at_item at_item_head">
+            <div>Created Date</div>
             <div>Target Type</div>
             <div>Target</div>
             <div>Message Type</div>
@@ -148,75 +189,60 @@
             <div>Status</div>
             <div>Messages</div>
           </div>
-          <div class="at_item">
-            <div>FEB, 12/07/2024, 4:38PM</div>
-            <div style="color: #2ebc96">whatsapp</div>
-            <div>+447585959490</div>
-            <div>Arrived</div>
-            <div style="color: #2ebc96">whatsapp</div>
-            <div>
-              <p class="s_dot_g"></p>
-              Send
+          <div>
+            <div class="at_item" *ngFor="let item of messageList">
+              <div>{{ item.createdAt | date : "MMM, dd/MM/y, h:mma" }}</div>
+              <div
+                [ngStyle]="{
+                  color: item.target_type === 'whatsapp' ? '#2EBC96' : '#3981F7'
+                }"
+              >
+                <ng-container
+                  *ngIf="item.target_type === 'whatsapp'; else smsText"
+                >
+                  WhatsApp
+                </ng-container>
+                <ng-template #smsText>SMS</ng-template>
+              </div>
+              <div>+{{ item.to_number }}</div>
+              <div style="text-transform: capitalize">{{ item.msg_type }}</div>
+              <div>
+                <span style="color: #3981f7" *ngIf="item.sent_by === 0"
+                  >SMS</span
+                >
+                <span style="color: #2ebc96" *ngIf="item.sent_by === 1">
+                  WhatsApp
+                </span>
+                <span *ngIf="item.sent_by === 2">None</span>
+              </div>
+              <div>
+                <p
+                  [ngClass]="item.status === 'sent' ? 's_dot_r' : 's_dot_g'"
+                ></p>
+                {{ item.status }}
+              </div>
+              <div
+                style="
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  width: 250px;
+                "
+              >
+                {{ item.message_text }}
+              </div>
             </div>
-            <div>Messages</div>
-          </div>
-
-          <div class="at_item">
-            <div>FEB, 12/07/2024, 4:38PM</div>
-            <div style="color: #2ebc96">whatsapp</div>
-            <div>+447585959490</div>
-            <div>Arrived</div>
-            <div style="color: #2ebc96">whatsapp</div>
-            <div>
-              <p class="s_dot_r"></p>
-              Not Send
-            </div>
-            <div>Messages</div>
-          </div>
-          <div class="at_item">
-            <div>FEB, 12/07/2024, 4:38PM</div>
-            <div style="color: #3981f7">SMS</div>
-            <div>+447585959490</div>
-            <div>Arrived</div>
-            <div style="color: #2ebc96">whatsapp</div>
-            <div>
-              <p class="s_dot_g"></p>
-              Send
-            </div>
-            <div>Messages</div>
-          </div>
-          <div class="at_item">
-            <div>FEB, 12/07/2024, 4:38PM</div>
-            <div style="color: #3981f7">SMS</div>
-            <div>+447585959490</div>
-            <div>Arrived</div>
-            <div style="color: #2ebc96">whatsapp</div>
-            <div>
-              <p class="s_dot_r"></p>
-              Not Send
-            </div>
-            <div>Messages</div>
-          </div>
-          <div class="at_item">
-            <div>FEB, 12/07/2024, 4:38PM</div>
-            <div style="color: #2ebc96">whatsapp</div>
-            <div>+447585959490</div>
-            <div>Arrived</div>
-            <div style="color: #2ebc96">whatsapp</div>
-            <div>
-              <p class="s_dot_r"></p>
-              Not Send
-            </div>
-
-            <div>Messages</div>
           </div>
         </div>
       </div>
     </div>
     <div class="devices">
       <div class="d_header">
-        <h4>Devices</h4>
-        <a routerLink="/devices">See All</a>
+        <div class="banner-bg">
+          <img src="../../../assets/banner-bg.png" />
+          <p>Total Devices</p>
+          <h4>Devices</h4>
+        </div>
       </div>
       <div class="d_body">
         <div class="d_card" *ngFor="let device of deviceList">
@@ -229,21 +255,7 @@
               >Total Sent Messages: <span>{{ device.total_calls }}</span></span
             >
           </div>
-          <div class="percentage">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="14"
-              height="10"
-              viewBox="0 0 14 10"
-              fill="none"
-            >
-              <path
-                d="M5.45709 0.742473C6.25706 -0.227435 7.74294 -0.227435 8.54291 0.742473L12.9611 6.09923C14.037 7.40371 13.1091 9.3718 11.4182 9.3718H2.58183C0.890891 9.3718 -0.0370021 7.40371 1.03892 6.09923L5.45709 0.742473Z"
-                fill="#3CD856"
-              />
-            </svg>
-            <span>23%</span>
-          </div>
+
           <div *ngIf="device?.active" class="d_badge">Active</div>
           <div *ngIf="!device?.active" class="d_badge-f">Inactive</div>
         </div>
